--- a/experiment.html
+++ b/experiment.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -70,6 +71,7 @@
 </div>
 
 <script src="js/vendor/jquery-1.11.2.min.js"></script>
+<script src="js/vendor/wow.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/WindowManager.js"></script>
@@ -81,6 +83,7 @@
 <script src="js/ACPToolKit.js"></script>
 
 <script>
+    new WOW().init();
 
     var trialsData;
     var currentTrial;
