Store no of windows opened inside csv

--- a/experiment.html
+++ b/experiment.html
@@ -88,7 +88,7 @@
     var trialsData;
     var currentTrial;
     var totalNumberOfTrials;
-    var headers = ['Participant id', 'Technique', 'Granularity',
+    var headers = ['Participant id', 'Technique', 'Granularity', 'Windows Opened',
         'Trial no', 'Stimuli', 'User Response', 'Trial Start Time',
         'Trial End Time', 'Trial Time', 'Accuracy'];
     var trialData = [];
@@ -100,6 +100,7 @@
 
             var technique = trialResult.technique;
             var granularity = trialResult.granularity;
+            var windowsOpened = trialResult.windows;
             var trialNum = currentTrial;
             var stimuli = trialResult.stimuli;
             var userResponse = trialResult.user_response;
@@ -108,7 +109,7 @@
             var trialDuration = trialResult.duration;
             var accuracy = stimuli === userResponse ? 1 : 0;
 
-            var row = [pid, technique, granularity, trialNum,
+            var row = [pid, technique, granularity, windowsOpened, trialNum,
                 stimuli, userResponse, trialStartTime,
                 trialEndTime, trialDuration, accuracy];
             trialData.push(row);
